Update address and alignment/spacing issue.

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -50,7 +50,7 @@
 	}
 	.row.ctaRow {
 		margin-top: -77px;
-		padding-bottom: 77px;
+		padding-bottom: 35px;
 		@media screen and (max-width: 1040px) {
 			margin-top: 7px;
 			padding: 0;
